--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
 <body>
 
+
     <div id="header"></div>
     <div class="left-side"></div>
     <div class="content">
         <br><br>
-        <h1>My CV Template</h1>
-        <h3>Alise Konivcenko</h3>
+
+        <h1>CV</h1>
+        <h2><a href="https://www.linkedin.com/in/alise-konivcenko">Alise Konivcenko</a></h2>
         <hr>
-        <br><br>
+        <br>
+        <img src="img/linkedin.jpg" alt="My photo" class="center">
         <p class="heading">Description</p>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas id erat vitae est commodo maximus. Proin sit amet ipsum vitae purus pellentesque ornare. Nunc egestas purus quis metus sodales, non pulvinar dolor pharetra. Phasellus viverra sit amet enim
-            nec eleifend. Aliquam nec ipsum vitae quam lobortis placerat. Quisque sem odio, pellentesque et feugiat eget, commodo sollicitudin orci. Duis dictum mollis risus. Donec interdum aliquet molestie. Integer rutrum, eros et porttitor fermentum,
-            nibh ligula maximus turpis, sit amet aliquam felis neque et tellus. In vestibulum suscipit odio eget maximus. Praesent euismod ac tortor vel aliquet. Aenean in auctor ante, at sodales ligula.
+            Ambitious and result-orientated Junior QA specialist looking for an internship to start a career in IT. Interested about new technologies with strong problem-solving and teamwork skills, self-learner and team-player at the same time, passionate in process
+            automation and software quality.
         </p>
+        <p>Knowledge of fundamentals of QA methodology · Hands-on experience with certain bug tracking and test management tools · Functional and non-functional testing knowledge. </p>
         <p class="heading">Skills:</p>
         <ul>
             <li>iScala</li>
@@ -35,16 +38,22 @@
         <p class="heading">Education:</p>
         <ol>
             <li>Riga Purvciems Secondary school</li>
-            <li>Baltic Academy</li>
+            <li>Baltic International Academy</li>
+            <li>Acodemy</li>
         </ol>
         <p class="heading">Experience:</p>
         <ol>
             <li>4finance AS</li>
+            <ul>
+                <li>Junior Accountant</li>
+                <li>Accountant</li>
+                <li>Senior Accountant</li>
+            </ul>
         </ol>
     </div>
     <div class="right-side"></div>
     <div class="footer">
-        <h3 class="copyright">All rights reserved. VUMC @ 2022</h3>
+        <h3 class="copyright">All rights reserved. AK @ 2022</h3>
     </div>
 
 
